<resources>
    <string name="app_name">Tic App</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="presale">Presale</string>
    <string name="presale_desc">Tidak perlu khawatir tertinggal\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="memulai">Memulai</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome,\nCevin Wahyu</string>
    <string name="now_playing">Now Playing</string>
    <string name="coming_soon">Coming Soon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_wallet">My Wallet</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="batalkan">Batalkan</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="datetime">Datetime</string>
    <string name="cinema">Cinema</string>
    <string name="ewallet">E-wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_biaya">Total Biaya</string>
    <string name="home">Home</string>
    <string name="selamat_menonton">Selamat Menonton!!</string>
    <string name="tiket_telah_berhasil_dibeli_ndan_selamat_menikmati_film">Tiket telah berhasil dibeli\ndan selamat menikmati film</string>
    <string name="uptodate">Uptodate</string>
</resources>